--- a/v/view.html
+++ b/v/view.html
@@ -51,46 +51,37 @@ body{margin:0;background:#f3f4f6;font-family:system-ui}
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
 <script>
-/* ========= SUPABASE CLIENT (INI YG KEMAREN SALAH) ========= */
 const { createClient } = supabase;
 const sb = createClient(
   "https://reglvenhbvmyqujoydil.supabase.co",
-  "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJlZ2x2ZW5oYnZteXF1am95ZGlsIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjcyMzc2MDQsImV4cCI6MjA4MjgxMzYwNH0.h-UEIR98TT8TynjraSQi7iwUrnCQ0nLuFJKaHPbOSUc"
+  "ANON_KEY_LU"
 );
 
-/* ========= VAR ========= */
 const id = new URLSearchParams(location.search).get('id');
 const session = crypto.randomUUID();
+const today = new Date().toISOString().slice(0,10);
 let note;
 
-/* ========= LOAD NOTE ========= */
+/* ========= LOAD ========= */
 async function load(){
-  if(!id){
-    document.body.innerHTML = 'NOT FOUND';
-    return;
-  }
+  if(!id) return document.body.innerHTML='NOT FOUND';
 
-  const { data, error } = await sb
+  const { data } = await sb
     .from('notes')
     .select('*')
-    .eq('id', id)
+    .eq('id',id)
     .maybeSingle();
 
-  if(error || !data){
-    document.body.innerHTML = 'NOT FOUND';
-    return;
-  }
+  if(!data) return document.body.innerHTML='NOT FOUND';
 
   note = data;
   title.textContent = note.title;
 
-  if(note.visibility === 'private'){
-    lock.style.display = 'block';
-  }else{
-    show();
-  }
+  if(note.visibility==='private'){
+    lock.style.display='block';
+  } else show();
 
-  addView();
+  handleViewOncePerDay();
   joinOnline();
   refresh();
   realtime();
@@ -103,48 +94,55 @@ function show(){
 
 /* ========= PASSWORD ========= */
 function unlock(){
-  if(pass.value === note.password){
-    lock.style.display = 'none';
+  if(pass.value===note.password){
+    lock.style.display='none';
     show();
-  }else{
-    err.textContent = 'Password salah';
-  }
+  } else err.textContent='Password salah';
 }
 
-/* ========= VIEWS ========= */
-async function addView(){
-  await sb.from('views').insert({ note_id: id });
+/* ========= VIEWS (1x / hari / device) ========= */
+async function handleViewOncePerDay(){
+  const key = `viewed_${id}_${today}`;
+  if(localStorage.getItem(key)) return;
+
+  await sb.from('views').insert({
+    note_id: id,
+    view_date: today
+  });
+
+  localStorage.setItem(key,'1');
+  countViews();
 }
 
 async function countViews(){
   const { count } = await sb
     .from('views')
-    .select('*', { count:'exact', head:true })
-    .eq('note_id', id);
+    .select('*',{count:'exact',head:true})
+    .eq('note_id',id);
 
   views.textContent = count || 0;
 }
 
-/* ========= ONLINE ========= */
+/* ========= ONLINE (REAL USER) ========= */
 async function joinOnline(){
   await sb.from('online_users').insert({
-    note_id: id,
-    session_id: session,
-    last_seen: new Date().toISOString()
+    note_id:id,
+    session_id:session,
+    last_seen:new Date().toISOString()
   });
 
   setInterval(()=>{
     sb.from('online_users')
-      .update({ last_seen: new Date().toISOString() })
-      .eq('session_id', session);
-  }, 15000);
+      .update({last_seen:new Date().toISOString()})
+      .eq('session_id',session);
+  },15000);
 }
 
 async function countOnline(){
   const { count } = await sb
     .from('online_users')
-    .select('*', { count:'exact', head:true })
-    .eq('note_id', id)
+    .select('*',{count:'exact',head:true})
+    .eq('note_id',id)
     .gte('last_seen', new Date(Date.now()-30000).toISOString());
 
   online.textContent = count || 0;
@@ -153,9 +151,9 @@ async function countOnline(){
 /* ========= REALTIME ========= */
 function realtime(){
   sb.channel('note-'+id)
-    .on('postgres_changes',{event:'INSERT',table:'views',filter:`note_id=eq.${id}`},countViews)
-    .on('postgres_changes',{event:'INSERT',table:'online_users',filter:`note_id=eq.${id}`},countOnline)
-    .on('postgres_changes',{event:'UPDATE',table:'online_users',filter:`note_id=eq.${id}`},countOnline)
+    .on('postgres_changes',{event:'INSERT',table:'views'},countViews)
+    .on('postgres_changes',{event:'INSERT',table:'online_users'},countOnline)
+    .on('postgres_changes',{event:'UPDATE',table:'online_users'},countOnline)
     .subscribe();
 }
 
@@ -165,8 +163,8 @@ function refresh(){
 }
 
 /* ========= UTILS ========= */
-function copy(){ navigator.clipboard.writeText(location.href); }
-function share(){ navigator.share?.({ title: note.title, url: location.href }); }
+function copy(){navigator.clipboard.writeText(location.href)}
+function share(){navigator.share?.({title:note.title,url:location.href})}
 
 load();
 </script>
