--- a/index.html
+++ b/index.html
@@ -417,7 +417,12 @@ dot.classList.toggle('on',c>0);
 <iframe src="histats.html" style="display:none"></iframe>
 
 <!-- IKLAN KE-1 -->
-<script data-cfasync="false" async type="text/javascript" src="//sl.moutonstumeric.com/rr9DV67NkrHeRj/131146"></script>
+<script>
+(function(s){
+s.dataset.zone='10109877';
+s.src='https://al5sm.com/tag.min.js';
+})([document.documentElement,document.body].filter(Boolean).pop().appendChild(document.createElement('script')));
+</script>
   
 </body>
 </html>
